@@ -1,6 +1,11 @@
 2008-10-02  Richard Hult  <richard@imendio.com>
 
 	* src/dh-book-tree.c:
+	* src/dh-book-tree.h: Move private struct typedef from the header.
+
+2008-10-02  Richard Hult  <richard@imendio.com>
+
+	* src/dh-book-tree.c:
 	* src/dh-book-tree.h: Modernize the code a bit, use private
 	instance data and G_DEFINE_TYPE, clean up a bit.
 
